<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="@dimen/_24sdp"
    android:scrollbars="none"
    tools:context=".activities.SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="136dp"
            android:contentDescription="@string/kaypaylogo"
            app:srcCompat="@drawable/kay_pay_logo" />

        <TextView
            android:layout_width="159dp"
            android:layout_height="36dp"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center_horizontal"
            android:text="@string/welcome_back"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_4sdp"
            android:text="@string/we_don_t_leave_you_alone"
            android:textColor="#081467"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/background_input"
            android:hint="@string/email"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/background_input"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp"
            tools:ignore="TextContrastCheck" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:animateLayoutChanges="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSignIn"
                android:layout_width="match_parent"
                android:layout_height="82dp"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold"
                app:cornerRadius="@dimen/_8sdp" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_gravity="center"
                android:visibility="invisible" />

        </FrameLayout>



        <TextView
            android:id="@+id/textCreateNewAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/create_new_account"
            android:textColor="@color/primary"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold" />


    </LinearLayout>

</ScrollView>